--- a/config
+++ b/config
@@ -45,8 +45,8 @@
   # autosetuprebase = always        # Use rebase instead of merge for 'git pull'.
 
 [core]
-  quotepath = true                # Use "" quoting for path.
-  editor = gvim -f                # Favorite editor for editing commit msgs etc.
+  quotepath = true                          # Use "" quoting for path.
+  editor = /usr/libexec/launchers/gvim -f   # Favorite editor for editing commit msgs etc.
 
   # Path to file containing types of files to ignore:
   excludesfile = ~/.config/git/ignore.global
