Profile config path for Red Hat password-store added

--- a/config
+++ b/config
@@ -165,3 +165,7 @@
 
 [includeIf "gitdir:~/devel/redhat/**"]
   path = ~/.config/git/profiles/redhat
+
+[includeIf "gitdir:~/.password-store/redhat/**"]
+  path = ~/.config/git/profiles/redhat
+
