--- a/config
+++ b/config
@@ -23,9 +23,6 @@
 
   fetch-branch = !git fetch upstream "$1" && git checkout -b "$1" upstream/"$1" && git push -u origin "$1"
 
-  pr = !gh pr checkout
-
-  hub = !hub 
   gdclone = !gdclone
   #pull-request = !hub pull-request
 
@@ -54,7 +51,7 @@
 
 [core]
   quotepath = true                                # Use "" quoting for path.
-  editor = gvim --nofork                          # Favorite editor for editing commit msgs etc.
+  editor = vim --nofork                           # Favorite editor for editing commit msgs etc.
 
   # Path to file containing types of files to ignore:
   excludesfile = ~/.config/git/ignore.global
