Make GPG-signing of all commits default

--- a/config
+++ b/config
@@ -2,10 +2,13 @@
 [user]
   name = Dee'Kej                  # Name used for commit submission.
   email = devel@deekej.io         # An e-mail to be used for commit submission.
-  #signingkey = XXXXXXXXXXXXXXXX   # GPG key to be used for commit signing.
+  signingkey = 6AA16E5E           # GPG key to be used for commit signing.
 
   # Default user configuration (can be overwritten by includeIf directives at the bottom):
   useconfigonly = true            # Make sure a properly setup config is used everytime.
+
+[commit]
+  gpgSign = true                  # Automatically GPG-sign every commit
 
 [gpg]
   program = gpg2                  # Use GPGv2 for commit signing.
