[advice] section added / skipped cherry picks advice disabled

--- a/config
+++ b/config
@@ -144,6 +144,9 @@
 [tar "tar.xz"]
   command = xz -c
 
+[advice]
+  skippedCherryPicks = false
+
 # -----------------------
 # GIT FLOW configuration:
 # -----------------------
